# lukelacaria-Artifact

./: .gitignore  README.md  odds_cache.json  pyproject.toml
.github/workflows/: ci.yml
instance/: users.db
src/: hedge.py  prototype.py
src/static/: index.html
src/templates/: index.html  login.html  register.html
test/: test_prototype.py
