[tool.poetry]
name = "Sports betting arbitrage"
version = "2.28.2"
description = "Requests library for the-odds-api"
authors = ["Luke Lacaria <lacaria01@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
requests = "^2.28.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
