[tool.poetry]
name = "Sports betting arbitrage"
version = "2.28.2"
description = "Requests library for the-odds-api"
authors = ["Luke Lacaria <lacaria01@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
taskipy = "^1.12.0"
flake8 = "^6.1.0"
black = "^23.9.1"
pytest = "^7.4.2"

[tool.poetry.dev-dependencies]
requests = "^2.28.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
prototype = "poetry run python src/prototype.py"
lint = "poetry run flake8"
format = "poetry run black src/prototype.py"
test = "poetry run pytest"
checks = "poetry run flake8 & poetry run black src/prototype.py & poetry run pytest"

