[tool.poetry]
name = "hedgemaster-web"
version = "0.1.0"
description = ""
authors = ["Luke Lacaria <lacaria01@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.1"
requests = "^2.31.0"
Flask-Cors = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
